package raftpb;

import "gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_enum_prefix_all) = false;

message Info {
	required int64 ID = 1 [(gogoproto.nullable) = false];
}

enum EntryType {
	EntryNormal     = 0;
	EntryConfChange = 1;
}

message Entry {
	required EntryType type  = 1 [(gogoproto.nullable) = false];
	required int64     term  = 2 [(gogoproto.nullable) = false];
	required int64     index = 3 [(gogoproto.nullable) = false];
	optional bytes     data  = 4;
}

message Snapshot {
	optional bytes data  = 1;
	repeated int64 nodes = 2;
	required int64 index = 3 [(gogoproto.nullable) = false];
	required int64 term  = 4 [(gogoproto.nullable) = false];
}

message Message {
	required int64    type     = 1  [(gogoproto.nullable) = false];
	required int64    to       = 2  [(gogoproto.nullable) = false];
	required int64    from     = 3  [(gogoproto.nullable) = false];
	required int64    term     = 4  [(gogoproto.nullable) = false];
	required int64    logTerm  = 5  [(gogoproto.nullable) = false];
	required int64    index    = 6  [(gogoproto.nullable) = false];
	repeated Entry    entries  = 7  [(gogoproto.nullable) = false];
	required int64    commit   = 8  [(gogoproto.nullable) = false];
	required Snapshot snapshot = 9  [(gogoproto.nullable) = false];
	required bool     denied   = 10 [(gogoproto.nullable) = false];
}

message HardState {
	required int64 term   = 1 [(gogoproto.nullable) = false];
	required int64 vote   = 2 [(gogoproto.nullable) = false];
	required int64 commit = 3 [(gogoproto.nullable) = false];
}

enum ConfChangeType {
	ConfChangeAddNode    = 0;
	ConfChangeRemoveNode = 1;
}

message ConfChange {
	required int64          ID      = 1 [(gogoproto.nullable) = false];
	required ConfChangeType Type    = 2 [(gogoproto.nullable) = false];
	required int64          NodeID  = 3 [(gogoproto.nullable) = false];
	optional bytes          Context = 4;
}
